--- a/templates/default/index.scss
+++ b/templates/default/index.scss
@@ -1,10 +1,26 @@
 #paper {
   display: grid;
   font-family: 'Lato', sans-serif;
-  font-size: 16px;
-  grid-template-columns: 6cm 14cm;
+  font-size: 14px;
+
+    width: 21cm;
+    height: 29.7cm;
+    padding: 0.5cm;
+  grid-template-columns: 6.5cm 13.5cm;
   grid-template-rows: 4cm auto 2cm;
   min-height: 100%;
+}
+
+a { 
+  text-decoration: none;
+}
+
+a:visited a:link {
+  color: blue;
+}
+
+h3 {
+  margin-top: 0;
 }
 
 #portrait {
@@ -39,6 +55,10 @@ ul {
   list-style-position: inside;
 }
 
+// span.block { 
+//   display: inline-block;
+// }
+
 #left {
   grid-row: 2;
   grid-column: 1;
@@ -48,20 +68,25 @@ ul {
   .phone,
   .profiles,
   .address,
+  .education,
   .skills,
   .languages,
   .interests {
     padding: .15cm 0;
+    & > li > ul {
+      padding: 0.2cm;
+      list-style-position: inside;
+    }
   }
 
   .email,
   .phone,
-  .profiles,
+  .profile,
   .address {
     padding: .2cm auto;
   }
 
-  .profile {
+  .profiles {
     padding-bottom: .08cm;
   }
 
@@ -88,10 +113,11 @@ ul {
   grid-column: 2;
 
   .employment {
+    width: 100%;
 
     .job {
       display: grid;
-      grid-template-columns: 10cm 4cm;
+      grid-template-columns: 10cm auto;
       grid-template-rows: auto auto auto;
       padding-bottom: .5cm;
 
@@ -115,27 +141,21 @@ ul {
       }
     }
   }
+}
 
-  .education {
+.education {
+  .university {
+    .name {
+      font-weight: bold;
+    }
 
-    .university {
-      display: grid;
-      grid-template-columns: 10cm 4cm;
-      grid-template-rows: auto auto auto;
-      padding-bottom: .2cm;
+    .period {
+      font-size: 14px;
+      text-align: center;
+    }
 
-      .name {
-        font-weight: bold;
-      }
-
-      .period {
-        font-size: 14px;
-        text-align: center;
-      }
-
-      .faculty, .area {
-        grid-column: 1;
-      }
+    .faculty, .area {
+      grid-column: 1;
     }
   }
 }
