--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -100,14 +100,21 @@
       <div class="description">
         {{ job.description }}
       </div>
+      {% if job.buzzwords %}
+      <div class="buzzwords">
+        {{ job.buzzwords }}
+      </div>
+      {% endif %}
     </div>
     {% endfor %}
   </div>
 </div>
 
 <footer>
-  Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb
-  niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia
-  29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. 2016
-  r. poz. 922).
+I hereby give consent for my personal data included in the application to be
+processed for the purposes of the recruitment process in accordance with Art. 6
+paragraph 1 letter a of the Regulation of the European Parliament and of the
+Council (EU) 2016/679 of 27 April 2016 on the protection of natural persons
+with regard to the processing of personal data and on the free movement of such
+data, and repealing Directive 95/46/EC (General Data Protection Regulation).
 </footer>
